# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2001 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.2.5 (20 Jan 2002)

  20 Jan 2002: Martin Schlemmer (azarah@gentoo.org): updated
  /etc/init.d/net.eth0 to 'use' pcmcia.

  8  Jan 2002: Martin Schlemmer (azarah@gentoo.org): added '--sh' to
  the dircolors command in /etc/skel/.bash_profile to handle cases
  where bash do not export $SHELL.

  6  Jan 2002: Martin Schlemmer (azarah@gentoo.org): updated 
  /etc/init.d/runscripts.sh, /etc/init.d/net.eth0, /etc/conf.d/net and
  removed /etc/init.d/net.eth0-dhcp to reflect a new 'bsd-ish' config
  scheme for the net.eth* scripts.

  6  Jan 2002: Donny Davies (woodchip@gentoo.org): Removed email address
  from manpages; no need for that..

  5  Jan 2002: Martin Schlemmer (azarah@gentoo.org): fix type-o in
  /etc/devfsd.conf; had 'dvd' in the cdrw stuff.

* rc-scripts 1.2.4 (30 Dec 2001)

  30 Dec 2001: Daniel Robbins (drobbins@gentoo.org): Changed default umask
  back to 022 as it should be.

  30 Dec 2001; Martin Schlemmer (azarah@gentoo.org): Updated
  /etc/init.d/checkfs to return 0 if the fs was successfully repaired.

  29 Dec 2001; Donny Davies (woodchip@gentoo.org):
    sort -t: -k3,3 -n /etc/passwd,group.  Ahhhh :))

  28 Dec 2001; Martin Schlemmer (azarah@gentoo.org); Updated
    /etc/init.d/depscan.sh to store info about missing dependancies of
    type 'need' in ${svcdir}/broken.  Also updated /etc/init.d/runscript.sh
    to use this when starting a script ('need' dependancies is critical for
    startup).  Added the broken() function to /etc/init.d/runscript.sh
    to list the missing dependancies.

    Updated /etc/init.d/runscript.sh for svc_start() to have better error
    checking.

    Updated /etc/init.d/functions.sh with ewend(), which is the same as
    eend(), but print a warning on error, not a error.  Updated